article 3 cohesive to other page

--- a/third-article/article3.html
+++ b/third-article/article3.html
@@ -24,6 +24,8 @@
 
 
   <body>
+    <div class="h1-background">
+
     <h5>MIKA ARAI</h5>
 
     <div class="container">
@@ -37,27 +39,35 @@
       </nav>  
       <div class="container-2">
 
-    <header>
-      <h4>
-        HEADLINE
-      </h4>
-      <h1>
-        International Student Can teach us a lot about design education for all
-      </h1>
+        <header>
+          <!-- <h4>
+            HEADLINE
+          </h4> -->
+          <h1>
+            International Student Can teach us a lot about design education for all
+          </h1>
+          <h2>
+            Increasingly, designers need to operate both locally and globally, translating visual forms across media, time, and place
+          </h2>
+        </div>
+      </div>
+    </div>
+  </header>
+  <div class="author">By Caspar Lam and YuJune Park</div>
 
 <!-- shapes -->
-      <div class="circle-container">
+      <!-- <div class="circle-container">
         <div class="circle">
           </div>
-      </div>
+      </div> -->
       <div class="circle-container-2">
         <div class="circle-2">
           </div>
       </div>
-      <div class="triangle-container">
+      <!-- <div class="triangle-container">
         <div class="triangle">
         </div>
-      </div>
+      </div> -->
       <div class="triangle-container-2">
         <div class="triangle-2">
         </div>
@@ -66,7 +76,7 @@
         <div class="rectangle">
           </div>
       </div>
-<div class="star-container">
+<!-- <div class="star-container">
 <div class="star"></div>
 <div class="star"></div>
 <div class="star"></div>
@@ -76,7 +86,7 @@
 <div class="star"></div>
 <div class="star"></div>
 <div class="star"></div>
-</div>
+</div> -->
 <div class="star-container-2">
   <div class="star-2"></div>
   <div class="star-2"></div>
@@ -89,11 +99,6 @@
   <div class="star-2"></div>
   </div>
 
-      <h2>
-        Increasingly, designers need to operate both locally and globally, translating visual forms across media, time, and place
-      </h2>
-      <div class="author">By Caspar Lam and YuJune Park</div>
-    </header>
     <article>
       <section>
         <p>
