--- a/index.html
+++ b/index.html
@@ -1,71 +1,94 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Binding</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="asset/common.css" rel="stylesheet" />
     <link href="asset/reset.css" rel="stylesheet" />
     <link href="landing.css" rel="stylesheet" />
 
     <!-- google font -->
-     <!-- manrope -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  <!-- alfa slab one -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <!-- manrope -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- alfa slab one -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
   <body>
-    <h5>
-MIKA ARAI    </h5>
-<header>
-  <h1>We All Belong Here</h1>
-  <h3>
-    <p><em class="bold">This website celebrates <em class="color">diversity and inclusion </em>because the world is better in full color, just like our CSS gradients.</em>
-    </p>
-    <p>Handcrafted in Visual Studio Code using HTML and CSS (no frameworks, just raw code vibes). Responsively designed to fit every screen, from tiny pockets to massive monitors because inclusion applies to devices too!
-    </p>
-    </h3>
-  <div class="circle-container">
-        <div class="circle">
-          </div>
+    <h5>MIKA ARAI</h5>
+    <header>
+      <h1>We All Belong Here</h1>
+      <h3>
+        <p>
+          <em class="bold"
+            >This website celebrates
+            <em class="color">diversity and inclusion </em>because the world is
+            better in full color, just like our CSS gradients.</em
+          >
+        </p>
+        <p>
+          Handcrafted in Visual Studio Code using HTML and CSS (no frameworks,
+          just raw code vibes). Responsively designed to fit every screen, from
+          tiny pockets to massive monitors because inclusion applies to devices
+          too!
+        </p>
+      </h3>
+      <div class="circle-container">
+        <div class="circle"></div>
       </div>
       <div class="triangle-container">
-        <div class="triangle">
-        </div>
+        <div class="triangle"></div>
       </div>
       <div class="rectangle-container">
-        <div class="rectangle">
-          </div>
+        <div class="rectangle"></div>
       </div>
-<div class="star-container">
-<div class="star"></div>
-<div class="star"></div>
-<div class="star"></div>
-<div class="star"></div>
-<div class="star"></div>
-<div class="star"></div>
-<div class="star"></div>
-<div class="star"></div>
-<div class="star"></div>
-</div>
-  </div>
-      </div>      
+      <div class="star-container">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+      </div>
     </header>
 
-
-<article>
-  <ul class="article">
-  <li><a href="first-article/article1.html">I wrote the book on user-friendly design. What I see today horrifies me.</a><h2>by Don Norman</h2></li>
-  <li><a href="second-article/article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Ellen Lupton & Leslie Xia</h2></li>
-  <li><a href="third-article/article3.html">International Student Can teach us a lot about design education for all</a><h2>by Caspar Lam & YuJune Park</h2></li>
-  </ul>
-</article>
+    <article>
+      <ul class="article">
+        <li>
+          <a href="first-article/article1.html"
+            >I wrote the book on user-friendly design. What I see today
+            horrifies me.</a
+          >
+          <h2>by Don Norman</h2>
+        </li>
+        <li>
+          <a href="second-article/article2.html"
+            >There Is No Such Thing As Neutral Graphic Design</a
+          >
+          <h2>by Ellen Lupton & Leslie Xia</h2>
+        </li>
+        <li>
+          <a href="third-article/article3.html"
+            >International Student Can teach us a lot about design education for
+            all</a
+          >
+          <h2>by Caspar Lam & YuJune Park</h2>
+        </li>
+      </ul>
+    </article>
   </body>
 </html>
-
-
