added scroll down animation

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <div class="eldercommunity-container">
         <div class="eldercommunity">Elder Community</div>
       </div>
+      <div class="scrolldown-container">
+        <div class="scrolldown">scroll down ↓</div>
+      </div>
       <div class="circle-container">
         <div class="circle"></div>
       </div>
